@@ -14,11 +14,15 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
+Fix for #1878361: "Hill Giants no longer throw boulders"
+Modified files:
+ server/skills.c
+Yann "gros" Chachkoff, 2008-01-27
 
 Fix for #1878323: "trunk server crashes when praying on alter"
 Modified files:
  server/gods.c
-Yann "gros" Chachkoff, 2008-01-26
+Yann "gros" Chachkoff, 2008-01-27
 
 New plugin: citylife. Adds NPCs to town, to make them more lively.
 See the plugin documentation for more details.
